Add /error endpoint for testing purposes
