# server/api/error.js
@@ -1,0 +1,8 @@
+import express from 'express';
+const router = express.Router();
+
+router.get('/', () => {
+  throw new Error('some-error');
+});
+
+export default router;
