# server/app.js
@@ -3,6 +3,7 @@ import httpContext from 'express-http-context';
 import { errorLogger, logger as requestLogger } from 'express-winston';
 import path from 'path';
 import swaggerUi from 'swagger-ui-express';
+import error from './api/error';
 import example from './api/example';
 import authenticatedExample from './api/example-authenticated';
 import healthCheck from './api/health';
@@ -10,22 +11,22 @@ import { options } from './config/logging';
 import { authenticateRequest } from './middleware/auth';
 import swaggerDocument from './swagger.json';
 
+// Express app
 const app = express();
 
-app.use(httpContext.middleware);
-app.use(requestLogger(options));
-
+// User defined routers
 app.get('/', (req, res) => {
   res.sendFile(path.join(__dirname, '/public/index.html'));
 });
-
+app.use('/error', error);
 app.use('/health', healthCheck);
-
 app.use('/example', example);
 app.use('/example-authenticated', authenticateRequest, authenticatedExample);
-
 app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
+// Loggers and context
+app.use(httpContext.middleware);
+app.use(requestLogger(options));
 app.use(errorLogger(options));
 
 // eslint-disable-next-line no-unused-vars
