# server/swagger.json
@@ -50,6 +50,21 @@
         ]
       }
     },
+    "/error": {
+      "get": {
+        "tags": ["error"],
+        "summary": "throws internal error for test purposes",
+        "produces": ["text/plain"],
+        "responses": {
+          "500": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/errorResponse"
+            }
+          }
+        }
+      }
+    },
     "/example-authenticated": {
       "get": {
         "tags": ["example-authenticated"],
